--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -7,7 +7,7 @@
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
-     <%= link_to "by#{prototype.user.name}", user_path(current_user), class: :card__user %> 
+     <%= link_to "by#{prototype.user.name}", "/users/#{prototype.user.id}", class: :card__user %> 
     
     
    
